<resources>
    <string name="app_name">Vivid Health</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_email">Email</string>
    <string name="edit_text_password">Password</string>
    <string name="login_btn_text">Login</string>
    <string name="signUp_btn_text">SignUp</string>
    <string name="sign_up_text">Not a user? Sign up.</string>
    <string name="edit_text_name">Name</string>
    <string name="edit_text_age">Age</string>
    <string name="edit_text_weight">Weight in Kg</string>

    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="add_reminder_btn">Add a new reminder</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="next_btn">Next</string>

    <string name="app_greeting">Hello, user!</string>
    <string name="reminder_title_1">Please drink at least 8 glasses of water water everyday!</string>
    <string name="reminder_detail_1">Remind me every 3 hours</string>
    <string name="reminder_time_1">Starting from 9:00 am to 10:00 pm</string>
    <string name="reminder_edit_btn">Edit this reminder</string>
    <string name="greeting">Here are your stats:</string>

    <string name="reminder_title_2">Remember to work out every day!</string>
    <string name="reminder_detail_2">Remind me every day</string>
    <string name="reminder_time_2">At 11:00 am</string>

    <string name="water_count">Water</string>
    <string name="posture_count">Posture</string>

    <string name="reminder_title_3">Time to sleep early!</string>
    <string name="reminder_detail_3">Remind me every day</string>
    <string name="reminder_time_3">At 10:00 pm</string>

    <string name="logout">Logout</string>

    <string name="app_new_reminder">Add a new reminder</string>

    <string name="new_reminder_frequency">How often would you like to be reminded?</string>
    <string name="new_reminder_title">Title of your new reminder</string>
    <string name="new_reminder_time_start">When would you like to begin this reminder?</string>
    <string name="new_reminder_time_end">When would you like to end this reminder?</string>

    <string name="old_reminder_title">New title for your reminder</string>

    <string name="new_reminder_frequency_option_1">Every week</string>
    <string name="new_reminder_frequency_option_2">Every 3 days</string>
    <string name="new_reminder_frequency_option_3">Every day</string>
    <string name="new_reminder_frequency_option_4">Every 12 hours</string>
    <string name="new_reminder_frequency_option_5">Every 3 hours</string>

    <string name="create_new_reminder_btn">Create new reminder</string>

    <string name="welcome_text">Welcome to Vivid Health.\n
        We first need to get your account set up.\n
        Please enter the following details.</string>
    <string name="toolbar_quote">“The best way to not feel hopeless is to get up and do something.”</string>
    <string name="toolbar_author">Barack Obama</string>
    <string name="toolbar_photographer">Photograph by Aarn Giri</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_reminders">Add new reminder</string>
    <string name="nav_workouts">Workouts</string>
    <string name="your_routine">Your routine</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_about">About us</string>
    <string name="nav_feedback">Send feedback</string>
    <string name="layout">Layout</string>
    <string name="nav_toggle">Night mode</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="delete_reminder_btn">Delete reminder</string>
    <string name="aboutus_title">Meet the developers</string>
    <string name="aboutus_description">Three CST students with big dreams trying to take the tech world by storm by developing one app at a time.\nWe at Vivid Health would like to thank our wonderful COMP 3717 instructors, Stack Overflow, and the Android Studio documentation for making this possible.</string>
    <string name="dev1">Chris</string>
    <string name="dev2">Asher</string>
    <string name="dev3">Zoltan</string>
    <string name="dev3description">Loves to solve problems... as long as there are cookies available around the workspace.</string>
    <string name="dev2description">A good back end developer however, its not really his preference of work.</string>
    <string name="dev1description">An aspiring frontend developer who considers herself very,
        <i>very</i> passionate about all things related to pasta.</string>
    <string name="github_btn">GITHUB</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_settings_guide">To make your experience using our app better,\nplease select your
    account settings.</string>
    <string name="water_reminder_prompt">Water Reminder:</string>
    <string name="remind_water_prompt">Each day, When would you like reminders to drink water to start?</string>
    <string name="frequency_prompt">In minutes, what interval would you like to be reminded</string>
    <string name="posture_reminder_prompt">Posture Reminder:</string>
    <string name="posture_water_prompt">Each day, When would you like reminders to drink water to start?</string>
    <string name="finish_btn">Finish</string>
</resources>