<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single"
        android:title="@string/your_routine">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_home"
            android:checked="true" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/sym_action_email"
            android:title="@string/nav_profile"
            />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_reminders" />
        <item
            android:id="@+id/nav_workouts"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_workouts" />
    </group>

    <group
        android:checkableBehavior="single"
        android:title="@string/nav_contact" >
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback" />
    </group>

    <item
        android:title="@string/layout">
        <menu>
            <item
                android:id="@+id/nav_toggle_mode"
              android:title="@string/nav_toggle"/>
        </menu>
    </item>

</menu>
