<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/app_new_reminder"
            android:textColor="@color/colorText"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_reminder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/new_reminder_title"
            android:textColorHint="@color/colorText" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/new_reminder_frequency"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioButtonWeek"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:buttonTint="@color/colorText"
                    android:text="@string/new_reminder_frequency_option_1"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/radioButton3Days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:buttonTint="@color/colorText"
                    android:text="@string/new_reminder_frequency_option_2"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/radioButtonDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:buttonTint="@color/colorText"
                    android:text="@string/new_reminder_frequency_option_3"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/radioButton12Hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:buttonTint="@color/colorText"
                    android:text="@string/new_reminder_frequency_option_4"
                    android:textColor="@color/colorText" />

                <RadioButton
                    android:id="@+id/radioButton3Hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:buttonTint="@color/colorText"
                    android:text="@string/new_reminder_frequency_option_5"
                    android:textColor="@color/colorText" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/editTextTimeBegin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/new_reminder_time_start"
            android:inputType="time"
            android:textColorHint="@color/colorText" />

        <EditText
            android:id="@+id/editTextTimeEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:ems="10"
            android:hint="@string/new_reminder_time_end"
            android:inputType="time"
            android:textColorHint="@color/colorText" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/create_new_reminder_btn"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            android:textStyle="bold"
            android:onClick="onCreateNewReminder"
            android:layout_marginBottom="32dp"/>
    </LinearLayout>
</ScrollView>