<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark" >
    <ImageView
        android:id="@+id/toolbar_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/nav_header"  />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|start"
        android:layout_margin="16dp" >
        <TextView
            android:id="@+id/toolbar_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_quote"
            android:textStyle="bold"
            android:layout_marginEnd="148dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"  />
        <TextView
            android:id="@+id/toolbar_author"
            android:textStyle="italic"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_author" />
        <TextView
            android:id="@+id/toolbar_photographer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_photographer" />
    </LinearLayout>
</FrameLayout>
