<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/logo_with_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:padding="32dp"
        android:layout_marginTop="64dp"/>

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryLight"
        android:hint="@string/edit_text_email"
        android:textColorHint="@color/colorPrimaryLight"
        android:backgroundTint="@color/colorAccent"/>

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:textColor="@color/colorPrimaryLight"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password"
        android:textColorHint="@color/colorPrimaryLight"
        android:backgroundTint="@color/colorAccent"/>

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/login_btn_text"
        android:onClick="onLogin"
        android:textColor="@color/colorText"
        android:background="@drawable/roundedbutton"/>

    <TextView
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onSignUp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:layout_marginBottom="64dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/colorPrimaryLight"/>



</LinearLayout>