<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".UserInfoActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@color/colorPrimaryLight"
            android:background="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="50dp">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/edit_text_name"
                android:inputType="textPersonName"
                android:backgroundTint="@color/colorPrimaryLight" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:cardCornerRadius="50dp">

            <EditText
                android:id="@+id/user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/edit_text_age"
                android:inputType="number"
                android:backgroundTint="@color/colorPrimaryLight"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            app:cardCornerRadius="50dp">

            <EditText
                android:id="@+id/user_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/edit_text_weight"
                android:inputType="number"
                android:backgroundTint="@color/colorPrimaryLight"/>
        </androidx.cardview.widget.CardView>

        <Button
            android:onClick="onNextBtn"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"

            android:layout_centerHorizontal="true"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:text="@string/next_btn">
        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>