<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".EditReminder">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/edit_reminder"
                android:textColor="@color/textColor"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/old_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:textColor="@color/textColor"
                android:layout_marginTop="8dp"/>


            <EditText
                android:id="@+id/old_reminder_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:hint="@string/old_reminder_title"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:text="@string/new_reminder_frequency"
                        android:textColor="@color/colorText"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <RadioButton
                            android:contentDescription="weekly"
                            android:checked="true"
                            android:id="@+id/radioButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:buttonTint="@color/colorText"
                            android:text="@string/new_reminder_frequency_option_1"
                            android:textColor="@color/colorText" />

                        <RadioButton
                            android:contentDescription="tri_day"
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:buttonTint="@color/colorText"
                            android:text="@string/new_reminder_frequency_option_2"
                            android:textColor="@color/colorText" />

                        <RadioButton
                            android:contentDescription="daily"
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:buttonTint="@color/colorText"
                            android:text="@string/new_reminder_frequency_option_3"
                            android:textColor="@color/colorText" />

                        <RadioButton
                            android:contentDescription="half_day"
                            android:id="@+id/radioButton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:buttonTint="@color/colorText"
                            android:text="@string/new_reminder_frequency_option_4"
                            android:textColor="@color/colorText" />

                        <RadioButton
                            android:contentDescription="tri_hour"
                            android:id="@+id/radioButton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="16dp"
                            android:buttonTint="@color/colorText"
                            android:text="@string/new_reminder_frequency_option_5"
                            android:textColor="@color/colorText" />
                    </RadioGroup>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/editTextTime3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:ems="10"
                android:textStyle="bold"
                android:hint="@string/new_reminder_time_start"
                android:textColorHint="@color/textColor" />

            <TimePicker
                android:id="@+id/r_time"
                android:timePickerMode="spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:headerBackground="@color/colorPrimary"
                android:numbersBackgroundColor="@color/colorPrimary"
                android:numbersSelectorColor="@color/colorPrimaryDark"
                android:numbersTextColor="@color/colorPrimaryLight">

            </TimePicker>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:onClick="onEditReminder"
                    android:padding="16dp"
                    android:text="@string/create_new_reminder_btn"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/toolbar_header"
        app:menu="@menu/menu_nav" />

</androidx.drawerlayout.widget.DrawerLayout>